--- a/src/app/styles/globals.scss
+++ b/src/app/styles/globals.scss
@@ -21,6 +21,11 @@ body {
   background-color: var(--color-dark-10);
 }
 
+h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+  padding: 0;
+}
+
 ul, li {
   margin: 0;
   padding: 0;
@@ -28,4 +33,9 @@ ul, li {
 
 li {
   list-style: none;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
 }
