--- a/src/app/styles/variables.scss
+++ b/src/app/styles/variables.scss
@@ -60,4 +60,7 @@
   --border-radius-s: 0.5em;    // 8px
   --border-radius-xs: 0.25em;  // 4px
 
+    // Borders
+  --border-default: 2px solid var(--color-accent-30);
+  --border-transparent: 2px transparent;
 }
