--- a/src/entities/game/ui/GameCover/GameCover.module.scss
+++ b/src/entities/game/ui/GameCover/GameCover.module.scss
@@ -2,4 +2,16 @@
   object-fit: cover;
   object-position: center center;
   border-radius: var(--border-radius-s);
+  background: linear-gradient(90deg, #c0c0c0 20%, rgb(146, 146, 146) 50%, #c0c0c0 80%);
+  background-size: 200% 100%;
+  animation: loading 3s infinite linear;
+}
+
+@keyframes loading {
+  0% {
+    background-position: 200% 0;
+  }
+  100% {
+    background-position: -200% 0;
+  }
 }
