--- a/src/widgets/GameInfo/GameInfo.module.scss
+++ b/src/widgets/GameInfo/GameInfo.module.scss
@@ -3,3 +3,9 @@
   flex-direction: row;
   gap: var(--space-xl);
 }
+
+.game_description {
+  display: flex;
+  flex-direction: column;
+  gap: var(--space-xl);
+}
