--- a/src/entities/game/ui/GameFact/GameFact.module.scss
+++ b/src/entities/game/ui/GameFact/GameFact.module.scss
@@ -5,5 +5,11 @@
 }
 
 .game_fact__title {
-  min-width: 180px;
+  min-width: 150px;
+}
+
+.game_fact__values {
+  display: flex;
+  flex-direction: column;
+  gap: var(--space-m);
 }
