feat - добавил платформы и жанры, пофиксил GameFacts по ширине

--- a/src/entities/game/ui/GameRating/GameRating.module.scss
+++ b/src/entities/game/ui/GameRating/GameRating.module.scss
@@ -9,7 +9,7 @@
 .stars_list {
   display: flex;
   flex-direction: row;
-  gap: var(--space-xs);
+  // gap: var(--space-xs);
   &:hover,
   &:hover * {
     cursor: pointer;
