--- a/src/app/styles/variables.scss
+++ b/src/app/styles/variables.scss
@@ -54,6 +54,7 @@
   --space-l: 1.5em;            // 24px
   --space-xl: 2em;             // 32px
   --space-xxl: 3em;            // 48px
+  --space-xxxl: 4em;           // 64px
 
     // Border Radius
   --border-radius-m: 1em;      // 16px
