--- a/src/widgets/GameFacts/GameFacts.module.scss
+++ b/src/widgets/GameFacts/GameFacts.module.scss
@@ -1,11 +1,17 @@
 .facts {
+  width: 100%;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   gap: var(--space-xl);
+  justify-content: space-between;
 }
 
 .facts_group {
   display: flex;
   flex-direction: column;
-  gap: var(--space-m);
+  gap: var(--space-xl);
+}
+
+.facts_group__second {
+  width: 380px;
 }
