--- a/src/widgets/GameInfo/GameInfo.module.scss
+++ b/src/widgets/GameInfo/GameInfo.module.scss
@@ -5,6 +5,7 @@
 }
 
 .game_info {
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -14,4 +15,11 @@
   display: flex;
   flex-direction: column;
   gap: var(--space-xl);
+}
+
+.game_interactives {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-end;
 }
