feat - добавил отображение дополнений в карточке игры

--- a/src/widgets/Header/Header.module.scss
+++ b/src/widgets/Header/Header.module.scss
@@ -1,6 +1,6 @@
 .header {
   margin-inline: auto;
-  margin-block: var(--space-xl) var(--space-xl);
+  margin-block: var(--space-xl) var(--space-xxl);
   display: flex;
   justify-content: space-between;
   align-items: center;
