--- a/src/app/styles/globals.scss
+++ b/src/app/styles/globals.scss
@@ -11,17 +11,17 @@
 
 html {
   font-size: 16px;
+  overflow-y: scroll;
 }
 
 body {
-  max-width: var(--global-max-width);
-  margin: 0 auto;
-  padding: 0 var(--page-inline-padding);
+  margin: 0;
+  padding: 0;
   color: var(--color-light-25);
   background-color: var(--color-dark-10);
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6, p, span {
   margin: 0;
   padding: 0;
 }
