--- a/src/shared/components/PageSection/PageSection.module.scss
+++ b/src/shared/components/PageSection/PageSection.module.scss
@@ -1,5 +1,9 @@
 .section {
   display: flex;
   flex-direction: column;
-  gap: var(--space-xl);
+  gap: var(--space-l);
+}
+
+.heading {
+  margin-block-start: var(--space-xl);
 }
