feat - добавил фичу добавления (и удаления) игры в коллекцию

--- a/src/entities/game/ui/GameRating/GameRating.module.scss
+++ b/src/entities/game/ui/GameRating/GameRating.module.scss
@@ -1,17 +1,22 @@
+@use '@/app/styles/mixins.scss' as *;
+
 .stars_group {
   display: flex;
   flex-direction: row;
   align-items: center;
   gap: var(--space-m);
-
 }
 
 .stars_list {
   display: flex;
   flex-direction: row;
-  // gap: var(--space-xs);
   &:hover,
   &:hover * {
     cursor: pointer;
   }
+}
+
+.disabled {
+  @include visually-hidden;
+  pointer-events: none;
 }
