--- a/src/shared/components/Dropdown/Dropdown.module.scss
+++ b/src/shared/components/Dropdown/Dropdown.module.scss
@@ -1,10 +1,9 @@
 .dropdown {
   position: relative;
+  max-width: max-content;
 }
 
 .dropdown_menu {
   position: absolute;
-  // top: var(--space-m);
-  bottom: -100%;
-  width: 100%;
+  top: calc(100% + 8px);
 }
