--- a/src/shared/components/MenuContainer/MenuContainer.module.scss
+++ b/src/shared/components/MenuContainer/MenuContainer.module.scss
@@ -1,5 +1,5 @@
 .menu {
-  max-width: 100%;
+  min-width: 100%;
   display: flex;
   flex-direction: column;
   border-radius: var(--border-radius-s);
