--- a/src/shared/components/MenuItem/MenuItem.module.scss
+++ b/src/shared/components/MenuItem/MenuItem.module.scss
@@ -9,6 +9,7 @@
   color: var(--color-light-25);
   background-color: var(--color-accent-10);
   @include transition(background-color);
+  text-wrap: nowrap;
   
   &:hover {
     cursor: pointer;
@@ -20,4 +21,8 @@
     background-color: var(--color-accent-30);
     @include transition(background-color);
   }
+}
+
+.icon {
+  flex-shrink: 0;
 }
