Изменил логику обновления, добавления, удаления игр на useReducer

--- a/src/app/styles/variables.scss
+++ b/src/app/styles/variables.scss
@@ -48,7 +48,7 @@
 
     // Font Weights
   --font-weight-regular: 400;
-  --font-weight-sremibold: 500;
+  --font-weight-semibold: 500;
 
     // Spaces
   --space-xs: 0.25rem;          // 4px
