--- a/src/shared/components/IconButton/IconButton.module.scss
+++ b/src/shared/components/IconButton/IconButton.module.scss
@@ -1,6 +1,7 @@
 @use '@/app/styles/mixins' as *;
 
 .button {
+  display: inline-block;
   border: none;
   color: var(--color-light-25);
   background-color: transparent;
