--- a/src/entities/game/ui/GameCard/GameCard.module.scss
+++ b/src/entities/game/ui/GameCard/GameCard.module.scss
@@ -9,6 +9,7 @@
   overflow: hidden;
   transform-origin: top;
   @include transition(transform);
+  margin-block-end: var(--space-s); // Запас снизу для анимации поднятия карточки
   
   &:before {
     content: '';
