--- a/src/shared/components/AccordeonItem/AccordionItem.module.scss
+++ b/src/shared/components/AccordeonItem/AccordionItem.module.scss
@@ -2,18 +2,23 @@
 
 .accordion_item {
   display: grid;
-  gap: var(--space-m);
-  grid-template-rows: 1fr 0fr;
-  @include transition(grid-template-rows);
+  grid-template-rows: min-content 0fr;
+  @include transition();
+  gap: 0;
   
   &__open {
-    grid-template-rows: 1fr 1fr;
-    @include transition(grid-template-rows);
+    grid-template-rows: min-content 1fr;
+    @include transition();
+    gap: var(--space-m);
 
     & .accordion_icon__chevron {
       @include transition(transform);
       transform: rotate(180deg)
     }
+  }
+
+  &:not(:last-child) {
+    margin-block-end: var(--space-m);
   }
 }
 
