feat - добавил раздел с видео (вынес Dialog в компонент)

--- a/src/app/styles/mixins.scss
+++ b/src/app/styles/mixins.scss
@@ -13,3 +13,18 @@
   white-space: nowrap !important;
   border: 0 !important;
 }
+
+@mixin loading-skeleton {
+  background: linear-gradient(90deg, var(--color-dark-50) 20%, var(--color-dark-25) 50%, var(--color-dark-50) 80%);
+  background-size: 200% 100%;
+  animation: loading 3s infinite linear;
+}
+
+@keyframes loading {
+  0% {
+    background-position: 200% 0;
+  }
+  100% {
+    background-position: -200% 0;
+  }
+}
