--- a/src/features/VideoGallery/VideoDialog/VideoDialog.module.scss
+++ b/src/features/VideoGallery/VideoDialog/VideoDialog.module.scss
@@ -1,3 +1,5 @@
+@use '@/app/styles/mixins.scss' as *;
+
 .dialog {
   border: none;
   padding: 0;
@@ -30,16 +32,5 @@
 
 .dialog_image {
   border-radius: var(--border-radius-s);
-  background: linear-gradient(90deg, var(--color-dark-50) 20%, var(--color-dark-25) 50%, var(--color-dark-50) 80%);
-  background-size: 200% 100%;
-  animation: loading 3s infinite linear;
-}
-
-@keyframes loading {
-  0% {
-    background-position: 200% 0;
-  }
-  100% {
-    background-position: -200% 0;
-  }
+  @include loading-skeleton;
 }
