--- a/src/shared/components/Loader/Loader.module.scss
+++ b/src/shared/components/Loader/Loader.module.scss
@@ -1,12 +1,11 @@
-
-
 .loader {
   width: var(--width);
+  font-size: var(--width);
   aspect-ratio: 1;
   border-radius: 50%;
   display: inline-block;
-  border-top: 4px solid var(--color-accent-40);
-  border-right: 4px solid transparent;
+  border-top: 0.2em solid var(--color-accent-40);
+  border-right: 0.2em solid transparent;
   box-sizing: border-box;
   animation: rotation 1s linear infinite;
 }
@@ -16,12 +15,12 @@
   box-sizing: border-box;
   position: absolute;
   left: 0;
-  top: 0;
+  top: -0.2em;
   width: var(--width);
   aspect-ratio: 1;
   border-radius: 50%;
-  border-bottom: 4px solid var(--color-accent-20);
-  border-left: 4px solid transparent;
+  border-bottom: 0.2em solid var(--color-accent-20);
+  border-left: 0.2em solid transparent;
 }
 
 @keyframes rotation {
