--- a/src/features/GamesFilter/GamesFilter.module.scss
+++ b/src/features/GamesFilter/GamesFilter.module.scss
@@ -22,3 +22,12 @@
     @include transition(background-color);
   }
 }
+
+.buttons {
+  display: flex;
+  flex-direction: column;
+  gap: var(--space-s);
+  margin-block-start: var(--space-s);
+}
+
+.button {}
