--- a/src/widgets/GameTitle/GameTitle.module.scss
+++ b/src/widgets/GameTitle/GameTitle.module.scss
@@ -5,3 +5,9 @@
   justify-content: space-between;
   align-items: flex-start;
 }
+
+.chipses {
+  display: flex;
+  flex-direction: row;
+  gap: var(--space-m);
+}
