--- a/src/widgets/GameInfo/GameInfo.module.scss
+++ b/src/widgets/GameInfo/GameInfo.module.scss
@@ -9,6 +9,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  gap: var(--space-xl);
 }
 
 .game_description {
@@ -26,4 +27,8 @@
 
 .game_websites {
   margin-inline-start: auto;
+}
+
+.game_summary {
+  line-height: 150%;
 }
